logs/dag_id=main_dag/run_id=manual__2022-10-01T202346.831026+0000/task_id=store_company_dim_table/attempt=1.log
[2022-10-01 20:25:01,357] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: main_dag.store_company_dim_table manual__2022-10-01T20:23:46.831026+00:00 [queued]>
[2022-10-01 20:25:01,376] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: main_dag.store_company_dim_table manual__2022-10-01T20:23:46.831026+00:00 [queued]>
[2022-10-01 20:25:01,376] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2022-10-01 20:25:01,376] {taskinstance.py:1357} INFO - Starting attempt 1 of 1
[2022-10-01 20:25:01,377] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2022-10-01 20:25:01,398] {taskinstance.py:1377} INFO - Executing <Task(PythonOperator): store_company_dim_table> on 2022-10-01 20:23:46.831026+00:00
[2022-10-01 20:25:01,405] {standard_task_runner.py:52} INFO - Started process 1743 to run task
[2022-10-01 20:25:01,410] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'main_dag', 'store_company_dim_table', 'manual__2022-10-01T20:23:46.831026+00:00', '--job-id', '92', '--raw', '--subdir', 'DAGS_FOLDER/main_dag.py', '--cfg-path', '/tmp/tmp9bgnrscg', '--error-file', '/tmp/tmps6qxa9fu']
[2022-10-01 20:25:01,411] {standard_task_runner.py:80} INFO - Job 92: Subtask store_company_dim_table
[2022-10-01 20:25:01,492] {task_command.py:369} INFO - Running <TaskInstance: main_dag.store_company_dim_table manual__2022-10-01T20:23:46.831026+00:00 [running]> on host cb37a969dddb
[2022-10-01 20:25:01,631] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=main_dag
AIRFLOW_CTX_TASK_ID=store_company_dim_table
AIRFLOW_CTX_EXECUTION_DATE=2022-10-01T20:23:46.831026+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-10-01T20:23:46.831026+00:00
[2022-10-01 20:25:01,636] {postgres.py:127} INFO - Running copy expert: COPY company_dim_table (Company_Full_Name,Shariah,Sector,Company_Key) FROM df_company_dim_table.csv WITH DELIMITER as ',' CSV HEADER, filename: df_company_dim_table.csv
[2022-10-01 20:25:01,651] {base.py:68} INFO - Using connection ID 'postgres' for task execution.
[2022-10-01 20:25:01,660] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 171, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 189, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/main_dag.py", line 28, in store_company_dim_table
    filename = 'df_company_dim_table.csv'
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/hooks/postgres.py", line 135, in copy_expert
    cur.copy_expert(sql, file)
psycopg2.errors.SyntaxError: syntax error at or near "df_company_dim_table"
LINE 1: ...ompany_Full_Name,Shariah,Sector,Company_Key) FROM df_company...
                                                             ^

[2022-10-01 20:25:01,699] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=main_dag, task_id=store_company_dim_table, execution_date=20221001T202346, start_date=20221001T202501, end_date=20221001T202501
[2022-10-01 20:25:01,730] {standard_task_runner.py:97} ERROR - Failed to execute job 92 for task store_company_dim_table (syntax error at or near "df_company_dim_table"
LINE 1: ...ompany_Full_Name,Shariah,Sector,Company_Key) FROM df_company...
                                                             ^
; 1743)
[2022-10-01 20:25:01,761] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-10-01 20:25:01,856] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
